@@ -858,7 +858,7 @@ class cmd_added(Command):
             if file_id in basis_inv:
                 continue
             path = inv.id2path(file_id)
-            if not os.access(b.abspath(path), os.F_OK):
+            if not os.access(bzrlib.osutils.abspath(path), os.F_OK):
                 continue
             print path
                 
